# smart_flashcards

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  railway.json
.claude/skills/: README.md
.claude/skills/anthropic-structured-outputs-sdk-version/: SKILL.md
.claude/skills/bughunt/: SKILL.md
.claude/skills/tailwind-v4-vite-setup/: SKILL.md
backend/: CLAUDE.md  pyproject.toml
backend/app/: config.py  deps.py  main.py  spa.py
backend/app/auth/: deps.py  models.py  router.py  service.py  sessions.py
backend/app/decks/: models.py  router.py  service.py
backend/app/generation/: deps.py  errors.py  http.py  models.py  service.py
backend/app/quiz/: agent.py  models.py  router.py
backend/app/skills/: flashcard_generation.md  quiz_dispute.md  quiz_grading.md  quiz_question.md  quiz_scoring.md  topic_notes_extraction.md
backend/app/storage/: __init__.py  files.py
backend/app/topics/: errors.py  models.py  router.py  service.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_deck_upload.py  test_decks.py  test_deploy.py  test_generation.py  test_live_api.py  test_quiz.py  test_storage.py  test_topic_instructions.py  test_topics.py
docs/: DEPLOY.md  DESIGN.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AddCardForm.tsx  CardRow.tsx  MasteryBar.tsx  NewTopicForm.tsx  QuizPanel.tsx  StudyMode.tsx
frontend/src/lib/: format.ts
frontend/src/pages/: DeckView.tsx  Decks.tsx  Login.tsx  Topics.tsx  Upload.tsx
