[tool.poetry]
name = "smart-flashcards-backend"
version = "0.1.0"
description = "FastAPI backend for Smart Flashcards — PDF to flashcard decks via Claude"
authors = ["Cole Nishida <coltonpnishida@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.34" }
anthropic = "^0.116.0"
pydantic = "^2.10"
pydantic-settings = "^2.7"
python-multipart = "^0.0.20"
bcrypt = "^4.2"
itsdangerous = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
httpx = "^0.28"
ruff = "^0.9"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
